## 0.x.x / 2018-x-xx

* Add AIMD limiter to concurrencylimit.
* Add concurrencylimit Runner for adaptive runners.

## 0.1.0 / 2018-12-17

* Added custom error type to know where the error comes from (library or outside).
* Added chain of Runner middlewares.
* Measure retry, bulkhead, timeout, failure injector, circuit breaker and command exection.
* Added metrics recorder through the execution context.
* Added failure injector.
* Added circuit breaker.
* Added bulkhead.
* Added retry.
* Added timeout.
* Added execution API.